--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
-<html>
+<html lang="en" dir="ltr">
 <head>
 <meta charset="utf-8">
-<title>Starship Troopers Game</title>
 <link rel="stylesheet" href="css/main.css">
+<title>Storm Troopers Game</title>
 </head>
-<body>
-  <h1 class="hide">Starship Troopers Game</h1>
-  <div id="container">
+  <body>
+  <h1>Starship Troopers Game</h1>
 
-  </div>
+  <canvas class="canvas" width="288" height="512"></canvas>
 
+  <p>Press any key to jump!</p>
 
-<script src="js/main.js"></script>
-</body>
+  <script src="js/main.js"></script>
+  </body>
 </html>
